--- a/src/app/components/mainNav/mainNav.css
+++ b/src/app/components/mainNav/mainNav.css
@@ -1,7 +1,10 @@
 .mainNav-text {
-  color: white; }
+  color: #ffcc11; }
 
-.navBar {
-  border-bottom: 2px solid #006400; }
+.navbar-inverse {
+  background-color: #777;
+  border: none; }
+  .navbar-inverse .navbar-nav .active a {
+    background-color: #555; }
 
 /*# sourceMappingURL=mainNav.css.map */
