--- a/src/app/projects/views/projects.html
+++ b/src/app/projects/views/projects.html
@@ -23,28 +23,10 @@
         <p>{{project.description}}</p>
       </div>
 
-      <section class="edit-form-section" ng-show="project.showEditProjectForm">
-        <div class="edit-form-container">
+      <edit-project-form></edit-project-form>
 
-          <form name="project.editProjectForm" novalidate>
+    </div> <!-- end of .project -->
 
-            <input type="text" name="title" ng-model="project.title" placeholder="Project Title *" required tabindex="1">
-            <div class="errors" ng-messages="project.editProjectForm.title.$error" ng-show="project.editProjectForm.title.$touched">
-              <p class="error" ng-message="required" ng-show="editProjectForm.title.$dirty">* Project Title is required</p>
-            </div>
-            <input type="text" ng-model="project.client" placeholder="Client" tabindex="2">
-            <textarea ng-model="project.description" placeholder="Project Description" tabindex="3"></textarea>
-            <p class="required right">* required fields</p>
-
-            <button class="button" type="submit" ng-click="projects.update(project)" ng-disabled="project.editProjectForm.$invalid || project.editProjectForm.$pristine" value="Submit" tabindex="4">Update</button>
-            <a class="cancel" ng-click="projects.cancelEdit(project);" tabindex="5">Cancel</a>
-
-          </form>
-
-        </div>
-      </section>
-
-    </div>
   </section>
 
   <section class="logo">
