--- a/src/app/projects/views/editProjectForm.html
+++ b/src/app/projects/views/editProjectForm.html
@@ -3,6 +3,10 @@
 
     <form name="editProjectForm" novalidate>
 
+      <div class="api-error">
+        <div class="error" ng-repeat="error in editProjectCtrl.errors" ng-show="editProjectCtrl.errors">{{error}}</div>
+      </div>
+
       <input type="text" name="title" ng-model="project.title" placeholder="Project Title *" required tabindex="1">
       <div class="errors" ng-messages="editProjectForm.title.$error" ng-show="editProjectForm.title.$touched">
         <p class="error" ng-message="required" ng-show="editProjectForm.title.$dirty">* Project Title is required</p>
