--- a/src/app/projects/views/addProjectForm.html
+++ b/src/app/projects/views/addProjectForm.html
@@ -1,5 +1,5 @@
 <section class="add-form-section">
-  <div class="add-form-container" ng-show="showAddProjectForm">
+  <div class="add-form-container" ng-show="showAddProjectForm" ng-cloak>
 
     <form name="newProjectForm" novalidate>
 
