add new ticket button to Backlog column

--- a/src/app/tickets/views/tickets.html
+++ b/src/app/tickets/views/tickets.html
@@ -3,7 +3,9 @@
 <section class="states">
 
   <div class="state" ng-repeat="state in ticketsCtrl.states">
-    <div class="state-title">{{state.title}}</div>
+    <div class="state-title">{{state.title}}
+      <div class="add-button" title="Add Ticket">+</div>
+    </div>
 
     <section class="tickets">
 
