--- a/src/app/components/mainNav/mainNav.html
+++ b/src/app/components/mainNav/mainNav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-static-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="http://localhost:3000/#">
+      <a class="navbar-brand" ng-href="/projects">
         Crutch
       </a>
     </div>
