add project title to board

--- a/src/app/tickets/tickets.scss
+++ b/src/app/tickets/tickets.scss
@@ -1,3 +1,10 @@
+h1 {
+  border: none;
+  text-transform: capitalize;
+  font-size: 20px;
+  margin-left: 15px;
+}
+
 .tickets {
   .add-form-section {
     padding: 0 10px;
