--- a/src/app/tickets/views/tickets.html
+++ b/src/app/tickets/views/tickets.html
@@ -1,5 +1,7 @@
 <main-nav></main-nav>
 
+<h1>{{ticketsCtrl.project.title}}</h1>
+
 <section class="states">
 
   <div class="state"
@@ -30,8 +32,4 @@
   </div>
 
 </section>
-
-
-<br>
-{{ticketsCtrl.tickets | json}}
 
